--- a/solutions/NYC_Schools.ipynb
+++ b/solutions/NYC_Schools.ipynb
@@ -1180,9 +1180,9 @@
    "metadata": {},
    "source": [
     "## Conclusion\n",
-    "Some crucial most salient question were answered. Data-driven results and findings are displayed!\n",
-    "Yet, there are more interesting questions to explore. Please find additional explorations on NYC schools dataset.\n",
-    "(PLACE A LINK TO MY EXPLORATION OF NYC SCHOOLS DATA HERE)"
+    "Some Interesting questions were answered. Data-driven results and findings display it most clearly.\n",
+    "\n",
+    "Yet, there are more interesting questions to explore. Please see [Deep Explorations on NYC] schools(https://github.com/SilverSurfer0/dataquest/blob/master/solutions/NYC_schools_exploration.ipynb) dataset. *Which ultimately answers the question: which district is the best to move into in respect to school and living expenses.*"
    ]
   }
  ],
