--- a/solutions/NYC_Schools.ipynb
+++ b/solutions/NYC_Schools.ipynb
@@ -1182,7 +1182,7 @@
     "## Conclusion\n",
     "Some Interesting questions were answered. Data-driven results and findings display it most clearly.\n",
     "\n",
-    "Yet, there are more interesting questions to explore. Please see [Deep Explorations on NYC schools](https://github.com/SilverSurfer0/dataquest/blob/master/solutions/NYC_schools_exploration.ipynb) dataset. *Which ultimately answers the question: which district is the best to move into in respect to school and living expenses.*"
+    "Yet, there are more interesting questions to explore. Please see [Deep Explorations on NYC schools](https://github.com/SilverSurfer0/dataquest/blob/master/solutions/NYC_schools_exploration.ipynb) dataset. *Which ultimately answers the question: which district is the best to move into in respect to school performance and living expenses.*"
    ]
   }
  ],
