--- a/solutions/NYC_schools_exploration.ipynb
+++ b/solutions/NYC_schools_exploration.ipynb
@@ -8,7 +8,9 @@
     "---\n",
     "Initially exploration was started following [Dataquest.io](https://www.dataquest.io) guidlines.\n",
     "\n",
-    "However I got a bit obsessed and squeezed out quite some capabilities from matplotlib. The results are really nice. You can scroll to the very bottom to ensure!\n",
+    "My exploration on NYC schools completed with a great visual and interesting results. There is quite a number of code lines I've produced, all for the sake of finding out on how good can matplotlib be in drawing visuals. Turns out it is quite capable!\n",
+    "\n",
+    "Scroll to the very bottom to marvel on on data-mined results wrapped up in a nice visual!\n",
     "\n",
     "This research would address following questions:\n",
     " - Determing wheter there's a correlation between class size and SAT scores\n",
