--- a/solutions/BusinessRecommendations_chinook.ipynb
+++ b/solutions/BusinessRecommendations_chinook.ipynb
@@ -32,7 +32,7 @@
    "metadata": {},
    "source": [
     "**Schema of the database** we'll be working with:\n",
-    "![title](img/chinook_db_schema.png)"
+    "![title](data/images/chinook_db_schema.png)"
    ]
   },
   {
