--- a/tuts/Lessons Regular Expressions Basics.ipynb
+++ b/tuts/Lessons Regular Expressions Basics.ipynb
@@ -162,7 +162,7 @@
     "\n",
     "To read several documents we can type each filename manually, assign to a new variable and read, which is ok, but not practical if we have many files or difficult names. How about to read all txt files at once?\n",
     "\n",
-    "To do that we would first build a list of filenames using `listdir()` function of the `os` module:"
+    "To do that we would first build a list of filenames using `listdir()` function of the `os` module. Here are 4 files with short genius poems, taken from [ranker.com](https://www.ranker.com/list/best-short-poems-to-memorize/ranker-books):"
    ]
   },
   {
