--- a/solutions/Jeeon_Prescription_datasets_relation.ipynb
+++ b/solutions/Jeeon_Prescription_datasets_relation.ipynb
@@ -233,7 +233,191 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>_id_x</th>\n",
+       "      <th>appointment_x</th>\n",
+       "      <th>doctor_x</th>\n",
+       "      <th>feedback_x</th>\n",
+       "      <th>patient_x</th>\n",
+       "      <th>prescription_x</th>\n",
+       "      <th>rmp_x</th>\n",
+       "      <th>id</th>\n",
+       "      <th>_id_y</th>\n",
+       "      <th>appointment_y</th>\n",
+       "      <th>doctor_y</th>\n",
+       "      <th>feedback_y</th>\n",
+       "      <th>patient_y</th>\n",
+       "      <th>prescription_y</th>\n",
+       "      <th>rmp_y</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>{'$oid': '5a2b637cb22475e2ae32bc63'}</td>\n",
+       "      <td>{'id': {'$oid': '5a1d021d4f7188001487be51'}, '...</td>\n",
+       "      <td>{'id': {'$oid': '57fa1b99a8746b001155cb98'}, '...</td>\n",
+       "      <td>{'id': {'$oid': '5a1d021d4f7188001487be51'}, '...</td>\n",
+       "      <td>{'id': {'$oid': '57f37fb9fca422001186a448'}, '...</td>\n",
+       "      <td>{'id': {'$oid': '5a1d3ec013743a00148a378e'}, '...</td>\n",
+       "      <td>{'id': {'$oid': '5805e6d5995bb80011fba444'}, '...</td>\n",
+       "      <td>5a2b637cb22475e2ae32bc63</td>\n",
+       "      <td>{'$oid': '5a2b637cb22475e2ae32bc63'}</td>\n",
+       "      <td>{'id': {'$oid': '5a1d021d4f7188001487be51'}, '...</td>\n",
+       "      <td>{'id': {'$oid': '57fa1b99a8746b001155cb98'}, '...</td>\n",
+       "      <td>{'id': {'$oid': '5a1d021d4f7188001487be51'}, '...</td>\n",
+       "      <td>{'id': {'$oid': '57f37fb9fca422001186a448'}, '...</td>\n",
+       "      <td>{'id': {'$oid': '5a1d3ec013743a00148a378e'}, '...</td>\n",
+       "      <td>{'id': {'$oid': '5805e6d5995bb80011fba444'}, '...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>{'$oid': '5a2b637cb22475e2ae32bc76'}</td>\n",
+       "      <td>{'id': {'$oid': '5a1baa677580fb00144e103d'}, '...</td>\n",
+       "      <td>{'id': {'$oid': '57f3597ddc989900118223a4'}, '...</td>\n",
+       "      <td>{'id': {'$oid': '5a1baa677580fb00144e103d'}, '...</td>\n",
+       "      <td>{'id': {'$oid': '59c371feefd219001236dcfa'}, '...</td>\n",
+       "      <td>{'id': {'$oid': '5a1bbc007580fb00144e12c4'}, '...</td>\n",
+       "      <td>{'id': {'$oid': '58399633cc32be0011fe8957'}, '...</td>\n",
+       "      <td>5a2b637cb22475e2ae32bc76</td>\n",
+       "      <td>{'$oid': '5a2b637cb22475e2ae32bc76'}</td>\n",
+       "      <td>{'id': {'$oid': '5a1baa677580fb00144e103d'}, '...</td>\n",
+       "      <td>{'id': {'$oid': '57f3597ddc989900118223a4'}, '...</td>\n",
+       "      <td>{'id': {'$oid': '5a1baa677580fb00144e103d'}, '...</td>\n",
+       "      <td>{'id': {'$oid': '59c371feefd219001236dcfa'}, '...</td>\n",
+       "      <td>{'id': {'$oid': '5a1bbc007580fb00144e12c4'}, '...</td>\n",
+       "      <td>{'id': {'$oid': '58399633cc32be0011fe8957'}, '...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>{'$oid': '5a2b637cb22475e2ae32bc79'}</td>\n",
+       "      <td>{'id': {'$oid': '5a1a34d61c28630014305c22'}, '...</td>\n",
+       "      <td>{'id': {'$oid': '588053b87b1cbd001196761b'}, '...</td>\n",
+       "      <td>{'id': {'$oid': '5a1a34d61c28630014305c22'}, '...</td>\n",
+       "      <td>{'id': {'$oid': '59c371fdefd219001236db60'}, '...</td>\n",
+       "      <td>{'id': {'$oid': '5a1bac027580fb00144e12b1'}, '...</td>\n",
+       "      <td>{'id': {'$oid': '59c0d1279e0ff9219b86d666'}, '...</td>\n",
+       "      <td>5a2b637cb22475e2ae32bc79</td>\n",
+       "      <td>{'$oid': '5a2b637cb22475e2ae32bc79'}</td>\n",
+       "      <td>{'id': {'$oid': '5a1a34d61c28630014305c22'}, '...</td>\n",
+       "      <td>{'id': {'$oid': '588053b87b1cbd001196761b'}, '...</td>\n",
+       "      <td>{'id': {'$oid': '5a1a34d61c28630014305c22'}, '...</td>\n",
+       "      <td>{'id': {'$oid': '59c371fdefd219001236db60'}, '...</td>\n",
+       "      <td>{'id': {'$oid': '5a1bac027580fb00144e12b1'}, '...</td>\n",
+       "      <td>{'id': {'$oid': '59c0d1279e0ff9219b86d666'}, '...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                  _id_x  \\\n",
+       "0  {'$oid': '5a2b637cb22475e2ae32bc63'}   \n",
+       "1  {'$oid': '5a2b637cb22475e2ae32bc76'}   \n",
+       "2  {'$oid': '5a2b637cb22475e2ae32bc79'}   \n",
+       "\n",
+       "                                       appointment_x  \\\n",
+       "0  {'id': {'$oid': '5a1d021d4f7188001487be51'}, '...   \n",
+       "1  {'id': {'$oid': '5a1baa677580fb00144e103d'}, '...   \n",
+       "2  {'id': {'$oid': '5a1a34d61c28630014305c22'}, '...   \n",
+       "\n",
+       "                                            doctor_x  \\\n",
+       "0  {'id': {'$oid': '57fa1b99a8746b001155cb98'}, '...   \n",
+       "1  {'id': {'$oid': '57f3597ddc989900118223a4'}, '...   \n",
+       "2  {'id': {'$oid': '588053b87b1cbd001196761b'}, '...   \n",
+       "\n",
+       "                                          feedback_x  \\\n",
+       "0  {'id': {'$oid': '5a1d021d4f7188001487be51'}, '...   \n",
+       "1  {'id': {'$oid': '5a1baa677580fb00144e103d'}, '...   \n",
+       "2  {'id': {'$oid': '5a1a34d61c28630014305c22'}, '...   \n",
+       "\n",
+       "                                           patient_x  \\\n",
+       "0  {'id': {'$oid': '57f37fb9fca422001186a448'}, '...   \n",
+       "1  {'id': {'$oid': '59c371feefd219001236dcfa'}, '...   \n",
+       "2  {'id': {'$oid': '59c371fdefd219001236db60'}, '...   \n",
+       "\n",
+       "                                      prescription_x  \\\n",
+       "0  {'id': {'$oid': '5a1d3ec013743a00148a378e'}, '...   \n",
+       "1  {'id': {'$oid': '5a1bbc007580fb00144e12c4'}, '...   \n",
+       "2  {'id': {'$oid': '5a1bac027580fb00144e12b1'}, '...   \n",
+       "\n",
+       "                                               rmp_x  \\\n",
+       "0  {'id': {'$oid': '5805e6d5995bb80011fba444'}, '...   \n",
+       "1  {'id': {'$oid': '58399633cc32be0011fe8957'}, '...   \n",
+       "2  {'id': {'$oid': '59c0d1279e0ff9219b86d666'}, '...   \n",
+       "\n",
+       "                         id                                 _id_y  \\\n",
+       "0  5a2b637cb22475e2ae32bc63  {'$oid': '5a2b637cb22475e2ae32bc63'}   \n",
+       "1  5a2b637cb22475e2ae32bc76  {'$oid': '5a2b637cb22475e2ae32bc76'}   \n",
+       "2  5a2b637cb22475e2ae32bc79  {'$oid': '5a2b637cb22475e2ae32bc79'}   \n",
+       "\n",
+       "                                       appointment_y  \\\n",
+       "0  {'id': {'$oid': '5a1d021d4f7188001487be51'}, '...   \n",
+       "1  {'id': {'$oid': '5a1baa677580fb00144e103d'}, '...   \n",
+       "2  {'id': {'$oid': '5a1a34d61c28630014305c22'}, '...   \n",
+       "\n",
+       "                                            doctor_y  \\\n",
+       "0  {'id': {'$oid': '57fa1b99a8746b001155cb98'}, '...   \n",
+       "1  {'id': {'$oid': '57f3597ddc989900118223a4'}, '...   \n",
+       "2  {'id': {'$oid': '588053b87b1cbd001196761b'}, '...   \n",
+       "\n",
+       "                                          feedback_y  \\\n",
+       "0  {'id': {'$oid': '5a1d021d4f7188001487be51'}, '...   \n",
+       "1  {'id': {'$oid': '5a1baa677580fb00144e103d'}, '...   \n",
+       "2  {'id': {'$oid': '5a1a34d61c28630014305c22'}, '...   \n",
+       "\n",
+       "                                           patient_y  \\\n",
+       "0  {'id': {'$oid': '57f37fb9fca422001186a448'}, '...   \n",
+       "1  {'id': {'$oid': '59c371feefd219001236dcfa'}, '...   \n",
+       "2  {'id': {'$oid': '59c371fdefd219001236db60'}, '...   \n",
+       "\n",
+       "                                      prescription_y  \\\n",
+       "0  {'id': {'$oid': '5a1d3ec013743a00148a378e'}, '...   \n",
+       "1  {'id': {'$oid': '5a1bbc007580fb00144e12c4'}, '...   \n",
+       "2  {'id': {'$oid': '5a1bac027580fb00144e12b1'}, '...   \n",
+       "\n",
+       "                                               rmp_y  \n",
+       "0  {'id': {'$oid': '5805e6d5995bb80011fba444'}, '...  \n",
+       "1  {'id': {'$oid': '58399633cc32be0011fe8957'}, '...  \n",
+       "2  {'id': {'$oid': '59c0d1279e0ff9219b86d666'}, '...  "
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "merged_dataset = prescr_corpus_surv.merge(prescr_corpus_full,left_on='id', right_on='id')\n",
+    "merged_dataset.head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -242,13 +426,12 @@
        "(1951, 15)"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "merged_dataset = prescr_corpus_surv.merge(prescr_corpus_full,left_on='id', right_on='id')\n",
     "merged_dataset.shape"
    ]
   },
