--- a/solutions/Jeeon_Prescription_datasets_relation.ipynb
+++ b/solutions/Jeeon_Prescription_datasets_relation.ipynb
@@ -233,7 +233,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "merged_dataset = prescr_corpus_surv.merge(prescr_corpus_full,left_on='id', right_on='id')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -405,13 +416,12 @@
        "2  {'id': {'$oid': '59c0d1279e0ff9219b86d666'}, '...  "
       ]
      },
-     "execution_count": 45,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "merged_dataset = prescr_corpus_surv.merge(prescr_corpus_full,left_on='id', right_on='id')\n",
     "merged_dataset.head(3)"
    ]
   },
